--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@monaco-editor/react": "^4.6.0",
-    "@mui/material": "^6.1.4",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@rjsf/core": "^5.22.1",
+    "@rjsf/material-ui": "^5.22.1",
+    "@rjsf/mui": "^5.22.1",
+    "@rjsf/utils": "^5.22.1",
+    "@rjsf/validator-ajv8": "^5.22.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
     "react-router-dom": "^6.27.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
