--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@rjsf/mui": "^5.22.1",
     "@rjsf/utils": "^5.22.1",
     "@rjsf/validator-ajv8": "^5.22.1",
+    "dayjs": "^1.11.13",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
